--- a/_posts/2023.5.16-services.markdown
+++ b/_posts/2023.5.16-services.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: ZackProfilePicture.jpg
 category: Documents
-title: About Me
+title: About Me!
 description: |
 ---
   My name is Zack LaCanna and I currently am pursing my Undergraduate degree in Computer Science and Cybersecurity at Arizona State University. All the links above link to previous projects I have worked on and learning oppertunities I have had in my Computer Science journey. 
